logging/elasticsearch-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: logging
spec:
  type: NodePort
  selector:
    app: elasticsearch
  ports:
  - name: http
    port: 9200
    protocol: TCP
    nodePort: 39200
  - name: transport
    port: 9300
    protocol: TCP
    nodePort: 39300
